@@ -14,16 +14,6 @@ public class ArrayStack<E> implements Stack<E> {
     }
 
     @Override
-    public int getSize() {
-        return arr.getSize();
-    }
-
-    @Override
-    public boolean isEmpty() {
-        return arr.isEmpty();
-    }
-
-    @Override
     public void push(E e) {
         arr.addLast(e);
     }
@@ -35,16 +25,26 @@ public class ArrayStack<E> implements Stack<E> {
 
     @Override
     public E peek() {
-        return arr.getLast();
+        return arr.get(arr.size() - 1);
+    }
+
+    @Override
+    public int size() {
+        return arr.size();
+    }
+
+    @Override
+    public boolean isEmpty() {
+        return arr.isEmpty();
     }
 
     @Override
     public String toString() {
         StringBuilder res = new StringBuilder();
         res.append("Stack: [");
-        for(int i = 0; i < arr.getSize(); i++) {
+        for(int i = 0; i < arr.size(); i++) {
             res.append(arr.get(i));
-            if(i != arr.getSize() - 1) {
+            if(i != arr.size() - 1) {
                 res.append(", ");
             }
         }
